--- a/index.html
+++ b/index.html
@@ -727,11 +727,12 @@
                   <ul>
                     <li><b>Master's of Computer Sicence</b></li>
                     <li><b>Relevant Courses:</b> Database Implementation,
-                      Graduate Design and Analysis of Algorithm, Introduction to Computer Network</li>
+                      Graduate Design and Analysis of Algorithm, Operating System, Secure and Cloud Computing,
+                      Introduction to Computer Network</li>
                   </ul>
                   <h6>Peking University</h6>
                   <ul>
-                    <li>Major: Big Data Application</li>
+                    <li><b>Major: Big Data Application</b></li>
                     <li><b>Relevant Courses:</b> Data Structures and Algorithm, Statistics, Linear Algebra, Machine
                       Learning,
                       Text Mining, Database Systems,
@@ -756,11 +757,12 @@
                   <h6>Tools & Framework </h6>
                   <ul>
                     <li>
-                      Pytorch, MySQL, Pandas, Numpy, MongoDB, Git, NodeJS, React</li>
+                      Pytorch, MySQL, Pandas, Numpy, Hadoop, Spark, Git, NodeJS, React</li>
                   </ul>
                   <h6>Applicable Concepts </h6>
                   <ul>
-                    <li>Object-Oriented Programming, Data Visualization and Analyze, Web development, Ensemble learning
+                    <li>Object-Oriented Programming, AI/ML applications, Relational Database, Data Mining and
+                      Visualization, Web development, Ensemble learning
                     </li>
                   </ul>
                 </div>
@@ -965,13 +967,24 @@
                         href="https://www.kaggle.com/code/theysaynounderscore/fraud-detection-on-medical-data?scriptVersionId=155749868">
                         Healthcare Provider Fraud Detection and Data Analysis</a></h3>
                     <p class=" description ">
-                      Unraveling the complexities of the U.S. medical system, my project employs advanced methodologies,
-                      including Random Forest, PCA, and innovative feature engineering. Achieving an outstanding 85%
-                      correction on the testing set, the project showcases not
-                      only the sophistication of the techniques employed but also their real-world effectiveness.</p>
-                    <button class="pink-button" role="button"
+                      This Kaggle project tackles healthcare fraud by analyzing a
+                      synthetic dataset of medical claims. The data,
+                      split into patient, provider, claim, and payment files,
+                      is first cleaned and merged.
+                      The core task is a classification problem: identifying potentially
+                      fraudulent providers. I performed exploratory data analysis (EDA)
+                      to uncover suspicious patterns, such as excessive billing or
+                      unusual claim frequencies. Finally, various machine learning
+                      models (like Random Forest or gradient boosting) are trained on
+                      engineered features (e.g., average claim amount per provider)
+                      to predict fraud, with a focus on metrics like recall and F1-score
+                      due to the imbalanced nature of the data.</p>
+                    <!-- <button class="pink-button" role="button"
                       heref="https://www.kaggle.com/code/theysaynounderscore/fraud-detection-on-medical-data?scriptVersionId=155749868"
-                      role="button">Kaggle Page</button>
+                      role="button">Kaggle Page</button> -->
+                    <div class="images-row">
+                      <img src="src/images/projects/fraudDetection.png" alt="Fraud detection" class="project-img">
+                    </div>
                   </div>
                 </div>
                 <div class="u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-5">
@@ -980,15 +993,23 @@
                         href="https://www.kaggle.com/code/theysaynounderscore/housing-data-visualization-in-bj">Data
                         Analysis of Housing in Beijing</a></h3>
 
-                    <p class=" description">Determine the home's value in the current market for a listing price.
+                    <p class=" description">
+                      In this project, I focused on exploratory data analysis (EDA) using
+                      Python. I utilized the matplotlib and seaborn libraries to
+                      visualize a dataset from lianjia.com, which contains 318,851
+                      housing transactions in Beijing from 2013 to 2017. The analysis
+                      explores 26 features, including price, size, location, decoration,
+                      and "Days on Market" (DOM). The primary goal is to practice visualization
+                      techniques and uncover trends within the Beijing real estate market,
+                      such as the relationship between property attributes and transaction prices.
                     </p>
                     <div class="images-row">
                       <img src="src/images/projects/bj2.png" alt="Beijing housing" class="project-img">
                       <img src="src/images/projects/bj.png" alt="Beijing housing" class="project-img">
                     </div>
-                    <button class="pink-button" role="button"
+                    <!-- <button class="pink-button" role="button"
                       href="https://www.kaggle.com/code/theysaynounderscore/housing-data-visualization-in-bj">Kaggle
-                      Page</button>
+                      Page</button> -->
                   </div>
                 </div>
               </div>
@@ -1023,11 +1044,12 @@
           personalized learning materials — all within an intuitive, minimal UI.
         </p>
 
-        <strong>Key Features:</strong>
-
-        AI Summarization – Get concise takeaways from any educational or informational video.
-
-        Auto Quizzes & Flashcards – Test your understanding instantly with AI-generated questions.
+        <strong class="description">Key Features:</strong>
+        <p class="description">
+          AI Summarization – Get concise takeaways from any educational or informational video.
+        </p>
+        <p class="description">Auto Quizzes & Flashcards – Test your understanding instantly with AI-generated
+          questions.</p>
 
         <p class="description">Smart Notes with Timestamps – Add notes tied to specific video moments and ask the AI to
           elaborate.</p>
