Update project descriptions

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
       computer science principles, I
       am
       currently pursuing a Master’s degree in Computer Science at Rice University. Here, I am diving into core areas
-      such as database implementation network and operating system.</p>
+      such as database implementation network and operating system. Below are some of my projects that I done during my graduate studies.</p>
 
 
     </p>
@@ -925,7 +925,7 @@
                   <div class="u-container-layout u-valign-middle-md u-container-layout-1">
                     <h3 class="u-text u-text-1" id="data-analysis-projects">Datathon and Kaggle Projects<br>
                     </h3>
-                    <h2 class="u-text section-title ">Those projects are more about data analysis and visualization</h2>
+                    <h2 class="u-text section-title ">Those projects are more about data analysis and visualization, mostly done during my undergraduate studies.</h2>
 
                     <!--p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p-->
