Update project descriptions

--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
               <div class="u-container-layout u-valign-middle u-container-layout-2">
                 <h3 class="u-text u-text-1">happy to see you</h3>
 
-                <p class="u-text u-text-grey-30 u-text-3">Connect with me!
+                <p class="description">Connect with me!g
                 </p>
 
               </div>
