--- a/index.html
+++ b/index.html
@@ -157,11 +157,10 @@
           title: 'PBIF — Power BIOS Intelligence Fixed',
           subtitle: 'LLM-assisted static code fix pipeline',
           meta: 'Jul–Aug 2025 · Software Engineering Intern · Taipei, Taiwan',
-          tldr: 'Automated part of static-analysis fixing: parse issues → propose patch → test → open PR.',
-          problem: 'Large C codebases receive many static-analysis findings; triage is slow.',
+          tldr: 'Automated part of static-analysis fixing with web parsing, RAG, and LLM deployment: parse issues → propose patch → test → push to github repository for code review.',
           built: 'Exported Coverity issues; RAG over internal docs; prompted LLM for patch + rationale; CI ran tests/linters; opened PRs with structured risk notes.',
-          role: 'Implemented orchestrator, retrieval, templates, and PR automation.',
-          impact: 'Reduced manual review ≈25% in trial; faster engineering loop.',
+          role: 'Implement web crawler on internal website to parse issues; Built LangChain pipeline for issue understanding and further code fix.',
+          impact: 'Fix 25% of the issues with automated code fix; faster engineering loop.',
           highlights: [
             'Guardrails and revert paths',
             'Repo-specific style prompts',
@@ -230,7 +229,7 @@
           ],
           tech: ['iOS', 'SwiftUI', 'Tailwind', 'Supabase', 'SQL schema & RLS', 'Vitest/Testing Library', 'Vercel (web)'],
           images: [
-            // 'src/images/projects/womenownedtaipei-1.png',
+             './src/images/projects/womenownedtaipei.jpg',
             // 'src/images/projects/womenownedtaipei-2.png',
             // 'src/images/projects/womenownedtaipei-3.png'
           ]
@@ -862,7 +861,8 @@
       computer science principles, I
       am
       currently pursuing a Master’s degree in Computer Science at Rice University. Here, I am diving into core areas
-      such as database implementation network and operating system. Below are some of my projects that I done during my graduate studies.</p>
+      such as database implementation network and operating system. Below are some of my projects that I done during my
+      graduate studies.</p>
 
 
     </p>
@@ -925,7 +925,8 @@
                   <div class="u-container-layout u-valign-middle-md u-container-layout-1">
                     <h3 class="u-text u-text-1" id="data-analysis-projects">Datathon and Kaggle Projects<br>
                     </h3>
-                    <h2 class="u-text section-title ">Those projects are more about data analysis and visualization, mostly done during my undergraduate studies.</h2>
+                    <h2 class="u-text section-title ">Those projects are more about data analysis and visualization,
+                      mostly done during my undergraduate studies.</h2>
 
                     <!--p class="u-text u-text-grey-30 u-text-3">The sale of a significant home is truly noteworthy. To represent a home of distinction requires highly-qualified real estate professionals with global reach and local expertise. Founded in 1976, the Sotheby’s International
                                             Realty brand is a unique and distinctive network of brokerage agencies offering a wide selection of luxury homes, estates and properties for sale throughout the world.</p-->
@@ -1057,8 +1058,8 @@
         <p class="description">Context-Aware Explanations – Click “Explain” to receive targeted clarifications based on
           the current section.</p>
 
-        Learning History – Track watch time, quiz results, and personal progress in your browser.
-        Watch a demonstration of my application development project.</p>
+        <p class="description">Learning History – Track watch time, quiz results, and personal progress in your browser.
+          Watch a demonstration of my application development project.</p>
         </p>
       </div>
       <div class="video-demo-right">
@@ -1118,7 +1119,7 @@
               <div class="u-container-layout u-valign-middle u-container-layout-2">
                 <h3 class="u-text u-text-1">happy to see you</h3>
 
-                <p class="description">Connect with me!g
+                <p class="description">Connect with me!
                 </p>
 
               </div>
